--- a/curso bootstrap/css/style.css
+++ b/curso bootstrap/css/style.css
@@ -23,3 +23,15 @@ body {
     background-color: #E43F2D;
     color: white;
 }
+
+.bg-footer ul li{
+    list-style-type: none;
+    color: white;
+}
+
+.bg-footer ul li a{
+    list-style-type: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
